--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.2.4",
     "@supabase/supabase-js": "2.45.0"
   },
   "devDependencies": {
